Version 3.0.5

- Added --cc= option to change C compiler
- Improved optimization of pin masks in some cases
- Allow {++ ... } to insert C++/C code inside PUB or PRI.
- Changed the __SPIN2X__ define to __SPINCVT__. The old __SPIN2X__
  symbol is still defined in the preprocessor for now, but is deprecated.
- Added a fastspin front end that mimics the openspin arguments.

Version 3.0.4

- Tweaked a few items in the GUI

Version 3.0.3

- Fixed a problem with the round() function not being recognized in
  C/C++ code, and with round() and trunc() output.
- Fixed abort with no explicit expression in C/C++

Version 3.0.2

- Added support for SPR and for arrays in cog memory generally.
- Allowed --data=cog

Version 3.0.1

- Fixed the distributed .zip file to have the correct spin2cpp
  versions.
- Added a Spin prefix function for --asm output (so other Spin
  compiler may be used)


Version 3.0.0

- Added a code generator to allow for PASM output. spin2cpp --asm can
  function as a compiler independent of PropGCC. With --code=hub it
  will produce LMM code, otherwise it produces COG code. Using
  --binary after --asm will cause a final binary to be produced. Using
  -g after --asm will cause the original Spin code to be inserted in
  the .pasm output.
- Added a simple GUI (spinconvert). See the Help option in spinconvert
  for details
- Added predefined symbols: __SPIN2CPP__ for C/C++ output,
  __SPIN2PASM__ for assembler output
- Added IF/THEN/ELSE expressions, e.g. x := IF x>0 then 0 ELSE x-1
- Extensive internal changes

==========================================================================
Version 1.96

- Made the PASM file directive search the same way we look for Spin files
- Added -I and -L options to search for files in a different path
- Functions which do not return a value are now declared as void
- Fixed coginig/cognew on Spin methods that are not static
- Some internal clean-ups

Version 1.95

- Improved detection of static member functions